--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     android:versionName="0.9.2" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="10" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -123,7 +123,7 @@
         <activity android:name=".event.ListEventActivity" />
         <activity android:name=".event.EventDetailActivity" />
         <activity
-            android:name=".ListPoiActivity"
+            android:name="org.medankulinar.event.ListPoiActivity"
             android:label="@string/title_activity_list_poi"
             android:theme="@style/AppTheme" >
         </activity>
