--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,13 +6,17 @@
     android:versionName="0.9.2" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="10" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="org.medankulinar.maps.permission.MAPS_RECEIVE" />
 
     <uses-feature
         android:name="android.hardware.camera.autofocus"
@@ -27,9 +31,6 @@
         android:required="false" >
     </uses-feature>
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" >
-    </uses-permission>
-
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -40,7 +41,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
 
         <!-- Start screen -->
@@ -123,10 +124,25 @@
         <activity android:name=".event.ListEventActivity" />
         <activity android:name=".event.EventDetailActivity" />
         <activity
-            android:name="org.medankulinar.event.ListPoiActivity"
+            android:name=".event.ListPoiActivity"
             android:label="@string/title_activity_list_poi"
             android:theme="@style/AppTheme" >
         </activity>
+        <activity
+            android:name=".event.LocationDetailActivity"
+            android:label="@string/title_activity_location_detail"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name="org.medankulinar.maps.MapViewActivity"
+            android:label="@string/title_activity_map_view"
+            android:theme="@style/AppTheme" >
+        </activity>
+
+        <!-- Goolge Maps API Key -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCVxNR2mits-zfOZ1H4OnIpE12s6Gnvxp0" />
     </application>
 
 </manifest>
