--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@ split.density=false
 target=Google Inc.:Google APIs:21
 android.library.reference.1=..\\mixarelib
 android.library=false
-android.library.reference.2=../appcompat_v7
+android.library.reference.2=..\\google-play-services_lib
+android.library.reference.3=../appcompat_v7
