--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,9 +6,11 @@
     android:versionName="0.9.2" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="17"
         android:targetSdkVersion="21" />
 
+    <permission android:name="org.medankulinar.permission.MAPS_RECEIVE" android:protectionLevel="signature"></permission>
+    
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,7 +18,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="org.medankulinar.maps.permission.MAPS_RECEIVE" />
 
     <uses-feature
         android:name="android.hardware.camera.autofocus"
@@ -30,7 +31,11 @@
         android:name="android.hardware.camera.front"
         android:required="false" >
     </uses-feature>
-
+	
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -42,6 +47,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
         <uses-library android:name="com.google.android.maps" />
 
         <!-- Start screen -->
@@ -143,6 +149,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCVxNR2mits-zfOZ1H4OnIpE12s6Gnvxp0" />
+        
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
