--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="21" />
 
-    <permission android:name="org.medankulinar.permission.MAPS_RECEIVE" android:protectionLevel="signature"></permission>
-    
+    <permission
+        android:name="org.medankulinar.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" >
+    </permission>
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -31,11 +34,10 @@
         android:name="android.hardware.camera.front"
         android:required="false" >
     </uses-feature>
-	
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
@@ -47,7 +49,6 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        
         <uses-library android:name="com.google.android.maps" />
 
         <!-- Start screen -->
@@ -131,16 +132,22 @@
         <activity android:name=".event.EventDetailActivity" />
         <activity
             android:name=".event.ListPoiActivity"
-            android:label="@string/title_activity_list_poi"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.medankulinar.MixView" />
         </activity>
         <activity
             android:name=".event.LocationDetailActivity"
-            android:label="@string/title_activity_location_detail"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.medankulinar.event.ListPoiActivity" />
         </activity>
         <activity
-            android:name="org.medankulinar.maps.MapViewActivity"
+            android:name=".maps.MapViewActivity"
             android:label="@string/title_activity_map_view"
             android:theme="@style/AppTheme" >
         </activity>
@@ -149,9 +156,15 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCVxNR2mits-zfOZ1H4OnIpE12s6Gnvxp0" />
-        
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name="org.medankulinar.maps.MapRoutingActivity"
+            android:label="@string/title_activity_map_routing" 
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
