--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,10 +54,10 @@
         <!-- Start screen -->
         <activity
             android:name=".PluginLoaderActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -161,9 +161,14 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="org.medankulinar.maps.MapRoutingActivity"
-            android:label="@string/title_activity_map_routing" 
-            android:theme="@style/AppTheme">
+            android:name=".maps.MapRoutingActivity"
+            android:label="@string/title_activity_map_routing"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".CategoryActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
         </activity>
     </application>
 
