--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -74,7 +74,8 @@
             android:name=".MixView"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
