--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@ split.density=false
 target=Google Inc.:Google APIs:21
 android.library.reference.1=..\\google-play-services_lib
 android.library=false
-android.library.reference.2=../android-support-v7-appcompat
-android.library.reference.3=../mixare-master/plugins/mixare-library
+android.library.reference.2=../appcompat_v7
+android.library.reference.3=../mixarelib
