--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 split.density=false
 # Project target.
 target=Google Inc.:Google APIs:21
-android.library.reference.1=..\\mixarelib
+android.library.reference.1=..\\google-play-services_lib
 android.library=false
-android.library.reference.2=..\\google-play-services_lib
-android.library.reference.3=../appcompat_v7
+android.library.reference.2=..\\appcompat_v7
+android.library.reference.3=../mixare-master/plugins/mixare-library
